# imv

./: .gitignore  AUTHORS  CHANGELOG  PACKAGERS.md  README.md  meson.build  meson_options.txt
.builds/: archlinux.yml  debian.yml  fedora.yml  freebsd.yml  ubuntu.yml
doc/: imv.1.txt  imv.5.txt
files/: imv-dir.desktop  imv.desktop
src/: backend_freeimage.c  backend_libjxl.c  backend_libnsgif.c  backend_libpng.c  backend_librsvg.c  console.c  imv.c  imv_msg.c  keyboard.c  main.c  viewport.c  viewport.h  window.h  wl_window.c  x11_window.c
